--- a/ProyectosJAVA/AuxiliarWS/nbproject/private/private.properties
+++ b/ProyectosJAVA/AuxiliarWS/nbproject/private/private.properties
@@ -4,4 +4,4 @@ j2ee.server.domain=D:/glassfish5/glassfish/domains/ServidorOOIA
 j2ee.server.home=D:/glassfish5/glassfish
 j2ee.server.instance=[D:\\glassfish5\\glassfish;D:\\glassfish5\\glassfish\\domains\\ServidorOOIA]deployer:gfv5ee8:localhost:4848
 j2ee.server.middleware=D:/glassfish5
-user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
+user.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\12.2\\build.properties
