--- a/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
+++ b/ProyectosNET/ProyectoOOIA/ProyectoOOIA/App.config
@@ -34,7 +34,7 @@
                 <binding name="CitaWSPortBinding" receiveTimeout="00:01:00" sendTimeout="00:01:00"
                     maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
                 <binding name="EventoAlumnoWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
+                    sendTimeout="00:01:00" maxReceivedMessageSize="2147483647" />
                 <binding name="HorarioWSPortBinding" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
                 <binding name="CodigoAtencionWSPortBinding1" receiveTimeout="00:01:00"
@@ -50,8 +50,6 @@
                 <binding name="PsicologoWSPortBinding" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
                 <binding name="EventoWSPortBinding" receiveTimeout="00:01:00"
-                    sendTimeout="00:01:00" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
-                <binding name="AlumnoWSPortBinding1" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
                 <binding name="CursoLlevadoWSPortBinding1" receiveTimeout="00:01:00"
                     sendTimeout="00:01:00" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" />
@@ -91,9 +89,6 @@
             <endpoint address="http://localhost:8080/WebServicesOOIA/CitaWS"
                 binding="basicHttpBinding" bindingConfiguration="CitaWSPortBinding"
                 contract="CitaWS.CitaWS" name="CitaWSPort" />
-            <endpoint address="http://alvaro:8080/WebServicesOOIA/EventoAlumno"
-                binding="basicHttpBinding" bindingConfiguration="EventoAlumnoWSPortBinding"
-                contract="EventoAlumnoWS.EventoAlumnoWS" name="EventoAlumnoWSPort" />
             <endpoint address="http://localhost:8080/WebServicesOOIA/HorarioWS"
                 binding="basicHttpBinding" bindingConfiguration="HorarioWSPortBinding"
                 contract="HorarioWS.HorarioWS" name="HorarioWSPort" />
@@ -118,9 +113,6 @@
             <endpoint address="http://localhost:8080/WebServicesOOIA/EventoWS"
                 binding="basicHttpBinding" bindingConfiguration="EventoWSPortBinding"
                 contract="EventoWS.EventoWS" name="EventoWSPort" />
-            <endpoint address="http://localhost:8080/WebServicesOOIA/AlumnoWS"
-                binding="basicHttpBinding" bindingConfiguration="AlumnoWSPortBinding1"
-                contract="AlumnoWS.AlumnoWS" name="AlumnoWSPort1" />
             <endpoint address="http://localhost:8080/WebServicesOOIA/CursoLlevadoWS"
                 binding="basicHttpBinding" bindingConfiguration="CursoLlevadoWSPortBinding1"
                 contract="CursoLlevadoWS.CursoLlevadoWS" name="CursoLlevadoWSPort1" />
@@ -153,6 +145,9 @@
             <endpoint address="http://localhost:8080/AuxiliarWS/GesionEventoWS"
                 binding="basicHttpBinding" bindingConfiguration="GestionEventoWSPortBinding"
                 contract="GestionEventoWS.GestionEventoWS" name="GestionEventoWSPort" />
+            <endpoint address="http://localhost:8080/WebServicesOOIA/EventoAlumno"
+                binding="basicHttpBinding" bindingConfiguration="EventoAlumnoWSPortBinding"
+                contract="EventoAlumnoWS.EventoAlumnoWS" name="EventoAlumnoWSPort" />
         </client>
     </system.serviceModel>
 </configuration>
