--- a/ProyectosJAVA/ServicioWebOOIA/nbproject/genfiles.properties
+++ b/ProyectosJAVA/ServicioWebOOIA/nbproject/genfiles.properties
@@ -6,3 +6,4 @@ build.xml.stylesheet.CRC32=1707db4f@1.84.0.1
 nbproject/build-impl.xml.data.CRC32=b8c055ec
 nbproject/build-impl.xml.script.CRC32=1464a7f4
 nbproject/build-impl.xml.stylesheet.CRC32=334708a0@1.84.0.1
+nbproject/jaxws-build.xml.stylesheet.CRC32=fb430199
