--- a/ProyectosJAVA/WebServicesOOIA/nbproject/project.properties
+++ b/ProyectosJAVA/WebServicesOOIA/nbproject/project.properties
@@ -52,7 +52,8 @@ javac.classpath=\
     ${reference.ooiaGestEventosModel.jar}:\
     ${reference.ooiaGestAtencionController.jar}:\
     ${reference.ooiaGestAcademicaModel.jar}:\
-    ${reference.ooiaCargaMasivaCSV.jar}
+    ${reference.ooiaCargaMasivaCSV.jar}:\
+    ${libs.metro.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
