Arregle lo de WebservicesOOIA
Arregle lo de WebservicesOOIA

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ hs_err_pid*
 /ProyectosJAVA/ooiaGestAtencionController/dist/
 /ProyectosJAVA/ooiaGestEventosModel/dist/
 /ProyectosJAVA/ooiaGestEventosController/dist/
+/ProyectosJAVA/ooiaGestAtencionModel/build/
