--- a/ProyectosJAVA/WebServicesOOIA/nbproject/project.properties
+++ b/ProyectosJAVA/WebServicesOOIA/nbproject/project.properties
@@ -52,8 +52,7 @@ javac.classpath=\
     ${reference.ooiaGestEventosModel.jar}:\
     ${reference.ooiaGestAtencionController.jar}:\
     ${reference.ooiaGestAcademicaModel.jar}:\
-    ${reference.ooiaCargaMasivaCSV.jar}:\
-    ${libs.metro.classpath}
+    ${reference.ooiaCargaMasivaCSV.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
