Citas-Procedures java

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,12 @@ hs_err_pid*
 /ProyectosJAVA/ooiaGestEventosModel/dist/
 /ProyectosJAVA/ooiaGestEventosController/dist/
 /ProyectosJAVA/ooiaGestAtencionModel/build/
+/ProyectosJAVA/Interfaces/build/
+/ProyectosJAVA/ooiaGestAcademicaModel/build
+/ProyectosJAVA/ooiaCargaMasivaCSV/build
+/ProyectosJAVA/ooiaGestAtencionController/build/
+/ProyectosJAVA/ooiaGestAtencionModel/build
+/ProyectosJAVA/ooiaGestHumanaController/build
+/ProyectosJAVA/ooiaGestEventosController/build/
+/ProyectosJAVA/OOIAConfigMySql/build/
+/ProyectosJAVA/ooiaGestEventosModel/build/
