--- a/ProyectosJAVA/ooiaGestAcademicaController/nbproject/private/private.properties
+++ b/ProyectosJAVA/ooiaGestAcademicaController/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 project.ooiaConfigMySql=D:\\Github\\ProyectosJAVA\\OOIAConfigMySql
-user.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\12.2\\build.properties
+user.properties.file=C:\\Users\\DAYANA\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
