--- a/ProyectosJAVA/ooiaGestHumanaController/nbproject/private/private.properties
+++ b/ProyectosJAVA/ooiaGestHumanaController/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 
 file.reference.mysql-connector-java-8.0.24.jar=D:\\Usuarios\\Gerardo\\Documents\\2021-1\\Lenguaje de Programaci\u00f3n 2\\Repositorios\\OOIAFinal\\ProyectosJAVA\\ooiaGestHumanaController\\src\\pe\\edu\\pucp\\ooia\\gest_humana\\lib\\mysql-connector-java-8.0.24.jar
-user.properties.file=C:\\Users\\Gerardo\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
+user.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\12.2\\build.properties
