--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ hs_err_pid*
 /ProyectosJAVA/ooiaGestEventosController/build/
 /ProyectosJAVA/OOIAConfigMySql/build/
 /ProyectosJAVA/ooiaGestEventosModel/build/
+/ProyectosJAVA/ooiaGestAcademicaController/build/
